--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Wenda Qiu"
-  avatar           : 
+  avatar           : "profile.png"
   bio              : 
   location         : "Shanghai, China"
   employer         :
