--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "CV"
+  - title: "CV (PDF)"
     url: /files/Wenda Qiu CV.pdf
     
   # - title: "Guide"
