--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,10 @@ author:
   name             : "Wenda Qiu"
   avatar           : "profile.png"
   bio              : 
-  location         : "Shanghai, China"
+  location         : "Urbana, Illinois"
   employer         :
   googlescholar    : 
-  email            : "qiuwenda@sjtu.edu.cn"
+  email            : "qiuwenda@illinois.edu"
   uri              :
   bitbucket        :
   codepen          :
